# postag

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy.yml  invoke.yml  sanity.yml
libs/simpleais/: __init__.py
postag/: func.py  lambda_function.py  script.py
tests/: __init__.py  test_func.py  test_lambda_function.py  test_script.py
tests/cassettes/: TestTLE.test_get.yaml
